@@ -1,11 +1,11 @@
-/*	$NetBSD: mouse.c,v 1.4 2005/01/19 20:37:52 xtraeme Exp $ */
+/*	$NetBSD: mouse.c,v 1.5 2006/02/05 17:38:33 jmmv Exp $ */
 
 /*-
- * Copyright (c) 1998 The NetBSD Foundation, Inc.
+ * Copyright (c) 1998, 2006 The NetBSD Foundation, Inc.
  * All rights reserved.
  *
  * This code is derived from software contributed to The NetBSD Foundation
- * by Juergen Hannken-Illjes.
+ * by Juergen Hannken-Illjes and Julio M. Merino Vidal.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -39,17 +39,36 @@
 #include <sys/ioctl.h>
 #include <sys/time.h>
 #include <dev/wscons/wsconsio.h>
+
 #include <err.h>
+#include <errno.h>
+#include <limits.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+
 #include "wsconsctl.h"
 
 static int mstype;
 static int resolution;
 static int samplerate;
+static struct wsmouse_repeat repeat;
+
+static void mouse_get_repeat(int);
+static void mouse_put_repeat(int);
 
 struct field mouse_field_tab[] = {
     { "resolution",		&resolution,	FMT_UINT,	FLG_WRONLY },
     { "samplerate",		&samplerate,	FMT_UINT,	FLG_WRONLY },
     { "type",			&mstype,	FMT_MSTYPE,	FLG_RDONLY },
+    { "repeat.buttons",		&repeat.wr_buttons,
+    				FMT_BITFIELD, FLG_MODIFY },
+    { "repeat.delay.first",	&repeat.wr_delay_first,
+    				FMT_UINT, FLG_MODIFY },
+    { "repeat.delay.decrement",	&repeat.wr_delay_decrement,
+    				FMT_UINT, FLG_MODIFY },
+    { "repeat.delay.minimum",	&repeat.wr_delay_minimum,
+    				FMT_UINT, FLG_MODIFY },
 };
 
 int mouse_field_tab_len = sizeof(mouse_field_tab)/
@@ -61,6 +80,30 @@ mouse_get_values(int fd)
 	if (field_by_value(&mstype)->flags & FLG_GET)
 		if (ioctl(fd, WSMOUSEIO_GTYPE, &mstype) < 0)
 			err(1, "WSMOUSEIO_GTYPE");
+
+	if (field_by_value(&repeat.wr_buttons)->flags & FLG_GET ||
+	    field_by_value(&repeat.wr_delay_first)->flags & FLG_GET ||
+	    field_by_value(&repeat.wr_delay_decrement)->flags & FLG_GET ||
+	    field_by_value(&repeat.wr_delay_minimum)->flags & FLG_GET)
+		mouse_get_repeat(fd);
+}
+
+static void
+mouse_get_repeat(int fd)
+{
+	struct wsmouse_repeat tmp;
+
+	if (ioctl(fd, WSMOUSEIO_GETREPEAT, &tmp) == -1)
+		err(1, "WSMOUSEIO_GETREPEAT");
+
+	if (field_by_value(&repeat.wr_buttons)->flags & FLG_GET)
+		repeat.wr_buttons = tmp.wr_buttons;
+	if (field_by_value(&repeat.wr_delay_first)->flags & FLG_GET)
+		repeat.wr_delay_first = tmp.wr_delay_first;
+	if (field_by_value(&repeat.wr_delay_decrement)->flags & FLG_GET)
+		repeat.wr_delay_decrement = tmp.wr_delay_decrement;
+	if (field_by_value(&repeat.wr_delay_minimum)->flags & FLG_GET)
+		repeat.wr_delay_minimum = tmp.wr_delay_minimum;
 }
 
 void
@@ -74,10 +117,51 @@ mouse_put_values(int fd)
 			err(1, "WSMOUSEIO_SRES");
 		pr_field(field_by_value(&resolution), " -> ");
 	}
+
 	if (field_by_value(&samplerate)->flags & FLG_SET) {
 		tmp = samplerate;
 		if (ioctl(fd, WSMOUSEIO_SRATE, &tmp) < 0)
 			err(1, "WSMOUSEIO_SRES");
 		pr_field(field_by_value(&tmp), " -> ");
 	}
+
+	if (field_by_value(&repeat.wr_buttons)->flags & FLG_SET ||
+	    field_by_value(&repeat.wr_delay_first)->flags & FLG_SET ||
+	    field_by_value(&repeat.wr_delay_decrement)->flags & FLG_SET ||
+	    field_by_value(&repeat.wr_delay_minimum)->flags & FLG_SET)
+		mouse_put_repeat(fd);
+}
+
+static void
+mouse_put_repeat(int fd)
+{
+	struct wsmouse_repeat tmp;
+
+	/* Fetch current values into the temporary structure. */
+	if (ioctl(fd, WSMOUSEIO_GETREPEAT, &tmp) == -1)
+		err(1, "WSMOUSEIO_GETREPEAT");
+
+	/* Overwrite the desired values in the temporary structure. */
+	if (field_by_value(&repeat.wr_buttons)->flags & FLG_SET)
+		tmp.wr_buttons = repeat.wr_buttons;
+	if (field_by_value(&repeat.wr_delay_first)->flags & FLG_SET)
+		tmp.wr_delay_first = repeat.wr_delay_first;
+	if (field_by_value(&repeat.wr_delay_decrement)->flags & FLG_SET)
+		tmp.wr_delay_decrement = repeat.wr_delay_decrement;
+	if (field_by_value(&repeat.wr_delay_minimum)->flags & FLG_SET)
+		tmp.wr_delay_minimum = repeat.wr_delay_minimum;
+
+	/* Set new values for repeating events. */
+	if (ioctl(fd, WSMOUSEIO_SETREPEAT, &tmp) == -1)
+		err(1, "WSMOUSEIO_SETREPEAT");
+
+	/* Now print what changed. */
+	if (field_by_value(&repeat.wr_buttons)->flags & FLG_SET)
+		pr_field(field_by_value(&repeat.wr_buttons), " -> ");
+	if (field_by_value(&repeat.wr_delay_first)->flags & FLG_SET)
+		pr_field(field_by_value(&repeat.wr_delay_first), " -> ");
+	if (field_by_value(&repeat.wr_delay_decrement)->flags & FLG_SET)
+		pr_field(field_by_value(&repeat.wr_delay_decrement), " -> ");
+	if (field_by_value(&repeat.wr_delay_minimum)->flags & FLG_SET)
+		pr_field(field_by_value(&repeat.wr_delay_minimum), " -> ");
 }
